# faSTM-stata

./: .gitignore  DESIGN.md  README.md
.github/workflows/: build.yml
ado/: fastm-windows-x86_64.plugin  fastm.ado  fastm.pkg  fastm.sthlp  fastm_english.stops  fastm_estat.ado  fastm_predict.ado  searchk.ado  searchk.sthlp  stata.toc  stmata.ado  stmata.sthlp
crate/: Cargo.toml
crate/src/: lib.rs  shim.c
examples/: cmd_demo.do  content_demo.do  cov_demo.do  fit_demo.do  fv_demo.do  hello.do  margins_demo.do  spline_demo.do
replication/: fastm_sj_replication.do
tests/parity/: README.md  compare_stm.R  export_content_gold.R  export_poliblog.R  export_spline_gold.R  gold_coherence.csv  gold_content_bound.txt  gold_frex.txt  gold_spline_bound.txt  parity_check.do  parity_check_content.do  parity_check_spline.do
tests/win_smoke/: README.md  host.c  run.sh
