[package]
name = "fastm"
version = "0.0.0"
edition = "2021"
publish = false
description = "Stata plugin for Structural Topic Models, backed by topica-core (Rust)."

[lib]
name = "fastm"
# staticlib: build/build.sh links this .a together with the StataCorp shim
# (shim.c + vendor/stplugin.c) into the final `fastm.plugin` shared object.
crate-type = ["staticlib"]

# NB: keep the default panic = "unwind". fastm_entry wraps its body in
# catch_unwind and converts a panic into a Stata return code, so panics never
# cross the extern "C" boundary into Stata. panic = "abort" would make
# catch_unwind useless (and take Stata down with it).

[dependencies]
# DEV: local path to the engine. Switch to a git tag pin for distribution,
# the way faSTM does. default-features = false keeps serde out (vendorable).
topica-core = { path = "../../topica/topica-core", default-features = false }
rand = "0.8"
rand_chacha = "0.3"   # ChaCha8Rng, same stream as topica-core
